08-taints-&-tolarations.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  tolerations:
    - key: "priority"
      operator: "Equal"
      value: "one"
      effect: "NoSchedule"
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-3
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
