10-node-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: size
                operator: In
                values:
                  - Large
#                  - antarctica-west1
#      preferredDuringSchedulingIgnoredDuringExecution:
#        - weight: 1
#          preference:
#            matchExpressions:
#              - key: another-node-label-key
#                operator: In
#                values:
#                  - another-node-label-value
  containers:
    - name: with-node-affinity
      image: registry.k8s.io/pause:3.8
