05-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: web
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
spec:
  type: ClusterIP
  namespace: web
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: rkalluru/debug
